--- a/static/style.css
+++ b/static/style.css
@@ -122,9 +122,9 @@ body, html {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
+    position:relative;
+    bottom: 1px;
     width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
+    
 }
 
