open go to anilist in new tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -104,7 +104,7 @@
     <img id="sidebar-cover" src="" class="img-fluid" alt="Cover">
     <h5 id="sidebar-title"></h5>
     <p id="sidebar-info"></p>
-    <a href="#" id="sidebar-link" class="btn btn-primary">Go to AniList</a>
+    <a href="#" id="sidebar-link" class="btn btn-primary" target="_blank">Go to AniList</a>
 </div>
 
 
