--- a/templates/index.html
+++ b/templates/index.html
@@ -41,21 +41,24 @@
         <a class="navbar-brand" href="#">Eastern Tales Shelf</a>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Novels</a>
+                <a class="nav-link active" onclick="filterByType('ALL')" href="#">All</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Manhwas</a>
+                <a class="nav-link" onclick="filterByType('NOVEL')" href="#">Novels</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">All</a>
+                <a class="nav-link" onclick="filterByType('MANHWA')" href="#">Korean Manhwas</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" onclick="filterByType('MANGA')" href="#">Japanese Mangas</a>
             </li>
             <li class="nav-item">
                 <button id="syncButton" class="btn btn-primary" type="button">Sync List</button>
-
             </li>
         </ul>
     </div>
 </nav>
+
 
 
 <!-- LEFT Side Menu -->
@@ -76,11 +79,11 @@
     <h5>Country</h5>
     <div class="mb-3">
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="japan" id="countryJapan" onchange="filterEntries()">
+            <input class="form-check-input" type="checkbox" value="JP" id="countryJapan" onchange="filterEntries()">
             <label class="form-check-label" for="countryJapan">Japan</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="korea" id="countryKorea" onchange="filterEntries()">
+            <input class="form-check-input" type="checkbox" value="KR" id="countryKorea" onchange="filterEntries()">
             <label class="form-check-label" for="countryKorea">Korea</label>
         </div>
         <!-- Repeat for other countries -->
@@ -121,13 +124,13 @@
             onclick="showDetails(this)"
             style="background-image: url('{{ entry.cover_image }}'); background-size: cover; background-position: center;"
             data-status="{{ entry.on_list_status }}"
-            data-country="{{ entry.country_made }}"
             data-type="{{ entry.media_format }}"
             data-title="{{ entry.title_english }}"
             data-chapters="{{ entry.all_chapters }}"
             data-progress="{{ entry.chapters_progress }}"
             data-anilist-url="{{ entry.anilist_url }}"
             data-cover="{{ entry.cover_image }}"
+            data-country="{{ entry.country_of_origin }}"
             data-aos="fade-up" 
             data-aos-offset="200"
             data-aos-duration="1000">
