--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,17 @@
 body, html {
     height: 100%; /* Make sure the page height is full */
     margin: 0; /* Reset default margin */
+    background-color: #343a40;
 }
 
 [data-aos="fade-up"] {
     opacity: 0;
     transition: opacity .5s ease-in-out;
-  }
+}
   
-  [data-aos="fade-up"].aos-animate {
-    opacity: 1;
-  }
+[data-aos="fade-up"].aos-animate {
+opacity: 1;
+}
   
 
 .grid-item {
@@ -126,6 +127,7 @@ body, html {
 #side-menu-right a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
+    background-color: #343a40; /* Background color */
     font-size: 25px;
     color: white;
     display: block;
@@ -137,6 +139,7 @@ body, html {
 /* Ensure the sidebar is initially hidden */
 .sidebar-hidden {
     transform: translateX(100%);
+    
 }
 
 
@@ -152,17 +155,23 @@ body, html {
 /* Adjust the main content area padding to prevent it from being hidden behind the sidebar */
 
 #main {
+    padding-top: 70px; /* Adjust this value based on the actual height of your navbar */
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 16px; /* Maintain the existing padding for left, right, and bottom */
     margin-left: auto;
     margin-right: auto;
     max-width: calc(100% - 2 * 250px); /* Assuming the sidebar is 250px */
-    padding: 16px;
+    background-color: #24282d;
 }
+
 
 /* The container wrapping all other elements, if not present, use body instead */
 .main-container {
     min-height: 100%;
     position: relative;
     padding-bottom: 60px; /* Height of the footer */
+    
 }
 
 
@@ -174,6 +183,7 @@ body, html {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(184px, 1fr));
     grid-gap: 1rem;
+    
 }
 
 
@@ -186,11 +196,21 @@ body, html {
     z-index: 1020; /* Ensure this is less than the z-index of the side-menu */
 }
 
+
+
 .navbar-nav {
     flex-direction: row;
     width: 100%;
     justify-content: center;
 }
+
+
+body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
+    color: #0fd3e184;
+    font-size: 20px;
+}
+
+
 
 
 
