color changes to right menu etc

--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,9 @@
 body, html {
     height: 100%; /* Make sure the page height is full */
     margin: 0; /* Reset default margin */
-    background-color: #343a40;
+    background-color: #24282d;
 }
+
 
 [data-aos="fade-up"] {
     opacity: 0;
@@ -17,7 +18,7 @@ opacity: 1;
 .grid-item {
     margin: 10px;
     padding: 20px;
-    border: 1px solid #dee2e6;
+    border: 2px solid transparent; /* Default border, can be overridden by specific classes */
     border-radius: .25rem;
     transition: transform .2s;
     position: relative;
@@ -52,6 +53,41 @@ opacity: 1;
     display: flex;
 }
 
+
+/* Style for .stats on hover when .grid-item has .border-completed */
+.grid-item.border-completed:hover .stats {
+    /* Your custom styles for completed items on hover */
+    background: rgba(9, 224, 9, 0.5); /* Example: a lighter shade of green on hover */
+    
+    
+    /* Add other styles as needed */
+}
+
+.grid-item.border-planning:hover .stats {
+    /* Your custom styles for completed items on hover */
+    background: rgba(14, 159, 212, 0.5); /* Example: a lighter shade of green on hover */
+    
+    
+    /* Add other styles as needed */
+}
+.grid-item.border-current:hover .stats {
+    /* Your custom styles for completed items on hover */
+    background: rgba(255, 193, 7, 0.5); /* Example: a lighter shade of green on hover */
+    
+    
+    /* Add other styles as needed */
+}
+.grid-item.border-paused:hover .stats {
+    /* Your custom styles for completed items on hover */
+    background: rgba(224, 33, 8, 0.5); /* Example: a lighter shade of green on hover */
+    
+    
+    /* Add other styles as needed */
+}
+
+
+
+
 .grid-item-title {
     position: absolute;
     bottom: 0;
@@ -74,7 +110,7 @@ opacity: 1;
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.2); /* Adjust the color and opacity to your liking */
+    
     border-radius: .25rem;
     z-index: 1;
 }
@@ -91,23 +127,12 @@ opacity: 1;
     left: 0; /* Align to the left side */
     top: 55px; /* Align to the top */
     height: 100%; /* Full height */
-    background-color: #343a40; /* Background color */
+    
     overflow-x: hidden; /* Hide horizontal overflow */
     padding-top: 60px; /* Padding from the top */
     color: white; /* Text color */
 }
-/* Update or remove styles related to the sidebar animation if not needed */
-#side-menu a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: white;
-    display: block;
-}
 
-#side-menu a:hover {
-    color: #f1f1f1;
-}
 
 /* ------------------------------------------------------------------------- */
 #side-menu-right {
@@ -116,30 +141,55 @@ opacity: 1;
     right: 0; /* Align to the left side */
     top: 55px; /* Align to the top */
     height: 100%; /* Full height */
-    background-color: #343a40; /* Background color */
+    max-height: calc(100% - 70px); /* Adjust 70px to the height of your footer */
+    overflow-y: auto; /* Enables scrolling for the sidebar content */
     overflow-x: hidden; /* Hide horizontal overflow */
-    padding-top: 60px; /* Padding from the top */
+    padding-top: 70px; /* Padding from the top */
     color: white; /* Text color */
     transform: translateX(100%); /* Start off-screen */
     transition: transform 0.3s ease-in-out;
 }
 /* Update or remove styles related to the sidebar animation if not needed */
 #side-menu-right a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 80px 32px; /* Combine padding-bottom with the shorthand */
     text-decoration: none;
-    background-color: #343a40; /* Background color */
     font-size: 25px;
     color: white;
     display: block;
 }
+
+
 #side-menu-right.active {
     transform: translateX(0); /* Move into view */
+    padding-bottom: 80px;
+
 }
+
+#side-menu-right .btn-primary {
+    color: white; /* Text color */
+    background-color: #007bff; /* Background color */
+    border: none; /* Removes the border */
+    border-radius: 0.25rem; /* Slightly rounded corners */
+    padding: 0.25rem 0.5rem; /* Padding inside the button */
+    font-size: 0.875rem; /* Font size */
+    line-height: 1.5; /* Line height */
+    text-align: center; /* Center the text */
+    white-space: nowrap; /* Prevents the text from wrapping */
+    vertical-align: middle; /* Aligns vertically */
+    cursor: pointer; /* Changes cursor to indicate it's clickable */
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out; /* Transition for hover effects */
+}
+
+#side-menu-right .btn-primary:hover {
+    background-color: #0056b3; /* Darker background color on hover */
+}
+
+
 
 /* Ensure the sidebar is initially hidden */
 .sidebar-hidden {
     transform: translateX(100%);
-    
+    background-color: #343a40; /* Background color */
 }
 
 
@@ -147,6 +197,7 @@ opacity: 1;
 /* Class to be added via JavaScript to slide in */
 .sidebar-visible {
     transform: translateX(0);
+    background-color: #343a40; /* Background color */
 }
 
 /* ------------------------------------------------------------------------- */
@@ -158,7 +209,7 @@ opacity: 1;
     padding-top: 70px; /* Adjust this value based on the actual height of your navbar */
     padding-left: 16px;
     padding-right: 16px;
-    padding-bottom: 16px; /* Maintain the existing padding for left, right, and bottom */
+    padding-bottom: 70px; /* Maintain the existing padding for left, right, and bottom */
     margin-left: auto;
     margin-right: auto;
     max-width: calc(100% - 2 * 250px); /* Assuming the sidebar is 250px */
@@ -324,4 +375,50 @@ body .navbar.navbar-expand-md.navbar-dark.bg-dark .navbar-nav .nav-link.active {
     text-align: center;
     line-height: 40px;
     z-index: 1001; /* Ensure button is above the chatbot */
+}
+
+
+
+
+
+
+
+
+.grid-item.border-completed {
+    border-color: rgb(40, 167, 69); /* green for completed */
+}
+
+.grid-item.border-current {
+    border-color: rgb(255, 193, 7); 
+}
+
+.grid-item.border-paused {
+    border-color: rgb(224, 33, 8);
+}
+
+.grid-item.border-planning {
+    border-color: rgb(14, 159, 212); 
+}
+.bg-dark-custom {
+    background-color: #343a40 !important; /* Dark background color, use !important to override Bootstrap's styles */
+    color: #ffffff !important; /* Light text color for contrast, use !important to override */
+}
+.bg-dark-custom .text-muted {
+    color: #cccccc !important; /* Lighter text color for contrast */
+}
+
+
+#sidebar-description {
+    display: block;
+    width: 100%; /* Adjust if necessary */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 1.5em; /* Adjust to your line-height */
+    transition: max-height 0.5s ease; /* Smooth transition for max-height */
+}
+
+/* This class will be added when you want to show the full description */
+#sidebar-description.expanded {
+    max-height: none; /* Allow it to take as much space as needed */
+    white-space: normal; /* Let the text wrap to new lines */
 }
