--- a/templates/index.html
+++ b/templates/index.html
@@ -114,9 +114,10 @@
     <p id="sidebar-description" class="collapse"></p>
 
     <!-- Button to control the collapse of the paragraph -->
-    <button id ="sidebar-readmore" class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#sidebar-description" aria-expanded="false" aria-controls="sidebar-description">
+    <button id="sidebar-readmore" class="btn btn-primary" type="button">
         Read More
     </button>
+
 
     <div id="sidebar-external-links" class="list-group mt-3">
         <!-- Links will be inserted here -->
