--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,10 @@
     <!-- jQuery (Bootstrap 5 no longer requires jQuery, so you may not need this) -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
     <title>My Reading List</title>
 </head>
     
@@ -29,6 +33,7 @@
 <!-- BODYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 <body>
+    
 <!-- Link to the Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Link to your custom script file -->
@@ -100,8 +105,6 @@
             <!-- Repeat for other types -->
         </select>
     </div>
-
-    <!-- Add more filters as needed -->
 </div>
 
 <!-- Right Side Menu -->
