--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,7 @@
     
 <!-- Link to the Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Link to your custom script file -->
-<script src="{{ url_for('static', filename='scripts.js') }}"></script>
+
 
 
 
@@ -73,38 +72,33 @@
     <input type="text" id="titleFilter" class="form-control mb-3" placeholder="Search by title" oninput="filterEntries()">
 
     <h5>List</h5>
-    <div class="mb-3">
-        <select class="form-select" id="status" onchange="filterEntries()">
-            <option value="">All Statuses</option>
-            <option value="COMPLETED">Completed</option>
-            <option value="PLANNING">Planning</option>
-            <option value="CURRENT">Reading</option>
-            <option value="PAUSED">On Hold</option>
-        </select>
+    <div id="list-status-filter" class="status-filter">
+        <div class="status-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count">0</span></div>
+        <div class="status-option" data-value="COMPLETED"><i class="fas fa-check-circle"></i> Completed <span class="status-count">0</span></div>
+        <div class="status-option" data-value="PLANNING"><i class="fas fa-lightbulb"></i> Planning <span class="status-count">0</span></div>
+        <div class="status-option" data-value="CURRENT"><i class="fas fa-book-open"></i> Reading <span class="status-count">0</span></div>
+        <div class="status-option" data-value="PAUSED"><i class="fas fa-pause-circle"></i> On Hold <span class="status-count">0</span></div>
+    </div>
+    
+    <h5>Status of release</h5>
+    <div id="release-status-filter" class="status-filter">
+        <div class="statusReleasing-option" data-value=""><i class="fas fa-stream"></i> All Statuses <span class="status-count">0</span></div>
+        <div class="statusReleasing-option" data-value="RELEASING"><i class="fas fa-play-circle"></i> Releasing <span class="status-count">0</span></div>
+        <div class="statusReleasing-option" data-value="FINISHED"><i class="fas fa-flag-checkered"></i> Finished <span class="status-count">0</span></div>
     </div>
 
     <h5>Country</h5>
     <div class="mb-3">
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="JP" id="countryJapan" onchange="filterEntries()">
-            <label class="form-check-label" for="countryJapan">Japan</label>
+            <label class="form-check-label" for="countryJapan"><i class="fas fa-flag"></i> Japan</label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" value="KR" id="countryKorea" onchange="filterEntries()">
-            <label class="form-check-label" for="countryKorea">Korea</label>
+            <label class="form-check-label" for="countryKorea"><i class="fas fa-flag"></i> Korea</label>
         </div>
-        <!-- Repeat for other countries -->
     </div>
-
-    <h5>Media Type</h5>
-    <div class="mb-3">
-        <select class="form-select" id="mediaTypeFilter" onchange="filterEntries()">
-            <option value="">All Types</option>
-            <option value="MANGA">Manga</option>
-            <option value="NOVEL">Novel</option>
-            <!-- Repeat for other types -->
-        </select>
-    </div>
+    
 </div>
 
 <!-- Right Side Menu -->
@@ -209,6 +203,7 @@
     duration: 1000 // values from 0 to 3000, with step 50ms
   });
 </script>
-  
+<!-- Link to your custom script file -->
+<script src="{{ url_for('static', filename='scripts.js') }}"></script>
 </body>
 </html>
